# libdevident

./: .gitignore  CMakeLists.txt  README.md  default.nix  flake.nix  meson.build
.github/workflows/: nix.yaml
core/: meson.build
core/docs/: meson.build
core/lib/: build.vala.in  component.vala  context.vala  device.vala  devident.deps.in  provider.vala  utils.vala
core/lib/component/: display.vala  input.vala
core/lib/context/: gmodule.vala  libpeas.vala
core/lib/device/: darwin.c
core/tests/: context.vala  device.vala  meson.build
data/: com.devident.conf  com.devident.service.in  config.h.in  devident.cfg
data/configs/: common.conf  pinephone-braveheart.conf
data/devices/: hp_pavilion_gaming_laptop.cfg  pinephone.cfg
data/modules/: alienware.plugin.in  fallback.plugin.in  hp.plugin.in  pine64.plugin.in
gtkviewer/: devident-gtkviewer.cmb  meson.build
gtkviewer/data/: gtkviewer.desktop.in  gtkviewer.gresource.xml  window.glade  window.ui
gtkviewer/src/: application.vala  window.vala
include/: devident.h
include/devident/: backend.h  enums.h
po/: POTFILES.in  en_US.po  libdevident.pot  meson.build
query/: meson.build
query/src/: build.vala.in  main.vala
src/: backend.c  build.vala.in  devident.c  init.c
src/daemon/: component.vala  daemon.vala  device.vala  utils.vala
src/lib/: component.vala  daemon.vala  device.vala  utils.vala
src/lib/client/: component.vala  context.vala  device.vala
src/lib/client/components/: backlight.vala  display.vala  optimization.vala  touchscreen.vala
src/lib/common/: component.vala  context.vala  device.vala
src/lib/server/: common.vala  component.vala  context.vala  device.vala
src/lib/server/components/: backlight.vala  display.vala  optimization.vala  touchscreen.vala
src/modules/: alienware.vala  fallback.vala  hp.vala  pine64.vala
xml/: meson.build
xml/data/devident-xml/: Alienware,006PVP.xml  Apple,MacBookPro16,1.xml  Micro-Star,International,Co.,,Ltd.,X470,GAMING,PLUS,MAX,(MS-7B79).xml  Standard,PC,(i440FX,+,PIIX,,1996),pc-i1440fx-7.0.xml  Standard,PC,(i440FX,+,PIIX,,1996),pc-i440fx-7.1.xml  Valve,Jupiter.xml
xml/docs/: meson.build
xml/lib/: build.vala.in  component.vala  device.vala  devident-xml.deps.in  init.vala  provider.vala  xml.plugin.in
xml/lib/component/: display.vala  input.vala
xml/tests/: device.vala  meson.build
